--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.PassIT"
         tools:targetApi="31">
         <activity
+            android:name=".TestsView"
+            android:exported="false" />
+        <activity
+            android:name=".AddTest"
+            android:exported="false" />
+        <activity
+            android:name=".AddTask"
+            android:exported="false" />
+        <activity
+            android:name=".TasksView"
+            android:exported="false" />
+        <activity
             android:name=".SubjectsView"
             android:exported="false" />
         <activity
