--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.PassIT"
         tools:targetApi="31">
         <activity
+            android:name=".NotesView"
+            android:exported="false" />
+        <activity
+            android:name=".NoteInfo"
+            android:exported="false" />
+        <activity
             android:name=".WeekCalendarView"
             android:exported="false" />
         <activity
