--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
 
     //Navigation Component
     def nav_version = "2.5.1"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
 
 }
